gccida/c0/add_const_value_attribute
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_const_value_attribute/src/dwarf2out.c:9124:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+64h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_const_value_attribute/src/dwarf2out.c:9138:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rtl)] != MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_const_value_attribute/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_const_value_attribute/src/dwarf2out.c:9145:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
r.r[2] = ( __int64)rtl[2]; 
                   ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_const_value_attribute/src/dwarf2out.c:9151:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
ra.r[2] = ( __int64)rtl[2]; 
                    ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_const_value_attribute/src/dwarf2out.c:9164:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rb.r[2] = ( __int64)rtl[2]; 
                    ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_const_value_attribute/src/dwarf2out.c:9175:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rc.r[2] = ( __int64)rtl[2]; 
                    ^~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_const_value_attribute/src/obj/dwarf2out.o] Error 1
